--- a/TODO
+++ b/TODO
@@ -13,3 +13,7 @@ PROBABLY DON'T EVEN WORRY ABOUT IT:
 1. Apparently the parameter adding I am doing with C#'s SqlCommand class
     is deprecated. Look in to the differences and probably switch over
 
+User Page - Coleman
+Profile Page - Aaradhana
+Login Page - Joyce
+
