--- a/TODO
+++ b/TODO
@@ -3,7 +3,7 @@ IMPORTANT:
 1. It would probably make sense to make a relation for tag.
     As it is we are storing the same tag many times for every
     time a position references it.
-2. Alter procedures to have the correct permissions
+2. Fix permissions for get_all_userids
 
 MODERATE:
 1. Add a constrain to 'Like' so a user cannot like their own profile
@@ -11,11 +11,11 @@ MODERATE:
     (probably something like 10)
 3. Fix Dream Career logo so it doesn't overlap with the buttons
 4. Make passwords secure
+5. Make emails unique
+6. Move the connection string to a config file
 
 PROBABLY DON'T EVEN WORRY ABOUT IT:
-1. Apparently the parameter adding I am doing with C#'s SqlCommand class
-    is deprecated. Look in to the differences and probably switch over
-2. In the admin page the insert profile thing doesn't always insert all of them.
+1. In the admin page the insert profile thing doesn't always insert all of them.
 
 User Page - Coleman
 Profile Page - Aaradhana
