--- a/TODO
+++ b/TODO
@@ -4,6 +4,9 @@ IMPORTANT:
     As it is we are storing the same tag many times for every
     time a position references it.
 2. Fix permissions for get_all_userids
+3. Fix the errors on the CreateUser page. As it is
+    the Javascript errors and the C# errors sort of
+    overlap.
 
 MODERATE:
 1. Add a constrain to 'Like' so a user cannot like their own profile
