Created an (untested) SQL script for an alternate secure DreamCareerUser table. Added an empty ViewProfile page. A little bit more work on PageRank

--- a/TODO
+++ b/TODO
@@ -13,9 +13,9 @@ MODERATE:
     (probably something like 10)
 3. Fix Dream Career logo so it doesn't overlap with the buttons
 4. Make passwords secure
-5. Make emails unique
 6. Move the connection string to a config file
 7. Make a default Profile page (Default to their own?)
+8. Add a salt and encryption to password storage
 
 PROBABLY DON'T EVEN WORRY ABOUT IT:
 1. In the admin page the insert profile thing doesn't always insert all of them.
