--- a/TODO
+++ b/TODO
@@ -20,11 +20,10 @@ MODERATE:
 PROBABLY DON'T EVEN WORRY ABOUT IT:
 1. In the admin page the insert profile thing doesn't always insert all of them.
 
-User Page - Coleman
-Profile Page - Aaradhana
-Login Page - Joyce
 
-IN THE MEETING DISCUSS
-Security
-Reasoning behind deletion policies
+profile - Joyce
+search - Coleman
+position - Aaradhana
+Secure username and password
+
 
