Added the TODO's for next week

--- a/TODO
+++ b/TODO
@@ -11,9 +11,10 @@ PROBABLY DON'T EVEN WORRY ABOUT IT:
 1. In the admin page the insert profile thing doesn't always insert all of them.
 
 
-profile - Joyce
-search - Coleman
-position - Aaradhana
-Secure username and password
+User Profile, company, and position can be created, edited, and deleted
+
+Aaradhana: Position
+Coleman: Company
+Joyce: Profile
 
 
