The changes I made to the SQL code

--- a/TODO
+++ b/TODO
@@ -20,7 +20,7 @@ Create Position page has errors
 
 Profile page has errors
     Can't update or delete    
-
 Create Company sent me to the error page
+Deleting the Profile still doesn't work
 
 
